Mon Mar  2 04:20:44 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/antispam/Antispam_App.cpp:
        * cuts/utils/antispam/Component_Instance.h:
        * cuts/utils/antispam/Component_Instance.inl:
        * cuts/utils/antispam/Component_Instance.cpp:
        * cuts/utils/antispam/Response_Time_Evaluator.h:
        * cuts/utils/antispam/Response_Time_Evaluator.cpp:

          . Moved the calculation of response time for each port from
            the component instance to the CUTS_Response_Time_Evaluator.

Mon Mar  2 03:45:38 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/antispam/Behavior_Graph.h:
        * cuts/utils/antispam/Component.cpp:
        * cuts/utils/antispam/Component_Assembly.cpp:
        * cuts/utils/antispam/Component_Instance.cpp:

          . Added the port's name to the CUTS_Port_Details instead of
            as a separate property.

          . Now the names of the ports are printed with their predicted
            response times.

Sun Mar  1 06:47:39 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/antispam/Antispam_App.h:
        * cuts/utils/antispam/Antispam_App.cpp:
        * cuts/utils/antispam/Antispam_Config_File.h:
        * cuts/utils/antispam/Antispam_Config_File.cpp:
        * cuts/utils/antispam/Behavior_Graph.h:
        * cuts/utils/antispam/Behavior_Graph.cpp:
        * cuts/utils/antispam/Component.h:
        * cuts/utils/antispam/Component.inl:
        * cuts/utils/antispam/Component.cpp:
        * cuts/utils/antispam/Component_Assembly.h:
        * cuts/utils/antispam/Component_Assembly.inl:
        * cuts/utils/antispam/Component_Assembly.cpp:
        * cuts/utils/antispam/Component_Instance.h:
        * cuts/utils/antispam/Component_Instance.inl:
        * cuts/utils/antispam/Component_Instance.cpp:
        * cuts/utils/antispam/Component_Manager.h:
        * cuts/utils/antispam/Component_Manager.cpp: