@@ -1,19 +1,0 @@
-// $Id$
-
-//
-// CUTS_Update_Service_Times
-//
-CUTS_INLINE
-CUTS_Update_Service_Times::CUTS_Update_Service_Times (void)
-{
-
-}
-
-//
-// ~CUTS_Update_Service_Times
-//
-CUTS_INLINE
-CUTS_Update_Service_Times::~CUTS_Update_Service_Times (void)
-{
-
-}
