@@ -1,3 +1,11 @@
+Mon Mar  2 04:31:39 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * cuts/utils/antispam/Update_Service_Times.h:
+        * cuts/utils/antispam/Update_Service_Times.inl:
+        * cuts/utils/antispam/Update_Service_Times.cpp:
+
+          Removed these files.
+
 Mon Mar  2 04:20:44 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * cuts/utils/antispam/Antispam_App.cpp:
